--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-    <script src="javascript.js">
+    <script src="rock-paper-scissors.js">
         
     </script>
 </body>
